@@ -3400,3 +3400,4 @@
 ( cvs diff -u -r 1.4.2.63 -r 1.4.2.64 src/gtk/about.c;  ) > 3.4.0cvs102.patchset
 ( cvs diff -u -r 1.1.2.21 -r 1.1.2.22 manual/plugins.xml;  ) > 3.4.0cvs103.patchset
 ( cvs diff -u -r 1.382.2.454 -r 1.382.2.455 src/compose.c;  ) > 3.4.0cvs104.patchset
+( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 manual/es/plugins.xml;  ) > 3.4.0cvs105.patchset
